--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -585,5 +585,7 @@
 	"surveyIsDraft": "Survey is stil a draft",
 	"surveyIsLive": "Survey is live",
 	"notAssignedParticipants": "Not Yet Assigned Participants",
-	"noAnswer": "No Answer"
+	"noAnswer": "No Answer",
+	"downloadResults": "Download Survey Results",
+	"surveyOption": "Option"
 }
