--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -632,7 +632,6 @@
 	"paperInbox": "Link zum Einreichen von Papieren",
 	"paperInboxDescription": "Über das hinterlegte Formular kannst du Positions- und Arbeitspapiere einreichen.",
 	"paperInboxBtn": "Papier einreichen",
-	"allNations": "Liste aller Nationen der Konferenz",
 	"ofAge": "Volljährig",
 	"termsAndConditions": "Teilnahmebedingungen",
 	"nonStateActor": "Nichtstaatlicher Akteur",
@@ -642,5 +641,6 @@
 	"notAssignedParticipants": "Noch nicht zugewiesene Teilnehmende",
 	"noAnswer": "Keine Antwort",
 	"downloadResults": "Alle Ergebnisse herunterladen",
-	"surveyOption": "Auswahl"
+	"surveyOption": "Auswahl",
+	"notes": "Notizen"
 }
