--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -577,7 +577,6 @@
 	"paperInbox": "Link to Submit Papers",
 	"paperInboxDescription": "You can submit position and working papers using the form provided.",
 	"paperInboxBtn": "Submit Paper",
-	"allNations": "List of all Nations at the Conference",
 	"ofAge": "Of Age",
 	"termsAndConditions": "Terms & Conditions",
 	"nonStateActor": "Non-State Actor",
@@ -587,5 +586,6 @@
 	"notAssignedParticipants": "Not Yet Assigned Participants",
 	"noAnswer": "No Answer",
 	"downloadResults": "Download Survey Results",
-	"surveyOption": "Option"
+	"surveyOption": "Option",
+	"notes": "Notes"
 }
