--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -489,7 +489,7 @@
 	"onlyHeadDelegateCanAssignCommittees": "Nur die Delegationsleitung kann Gremien zuweisen.",
 	"payment": "Beitragszahlung",
 	"postalRegistration": "Postalische Anmeldung",
-	"personalStatusDescription": "Hier kannst du deinen persönlichen Status verflogen. Dieser umfasst alle formellen Schritte, die du erledigen musst. Du kannst an der Konferenz nicht teilnehmen, wenn du nicht alle Aufgaben von dieser Liste erledigt hast!",
+	"personalStatusDescription": "Hier kannst du deinen persönlichen Status verfolgen. Dieser umfasst alle formellen Schritte, die du erledigen musst. Du kannst an der Konferenz nicht teilnehmen, wenn du nicht alle Aufgaben von dieser Liste erledigt hast!",
 	"takeAction": "Jetzt Erledigen",
 	"userAgreement": "Verbindliche Anmeldung",
 	"guardianAgreement": "Einwilligung Erziehungsberechtigten",
