✨ feature: add download functionality for postal registration documents and update translations

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -642,5 +642,6 @@
 	"notAssignedParticipants": "Noch nicht zugewiesene Teilnehmende",
 	"noAnswer": "Keine Antwort",
 	"downloadResults": "Alle Ergebnisse herunterladen",
-	"surveyOption": "Auswahl"
+	"surveyOption": "Auswahl",
+	"downloadPostalDocuments": "Dokumente für postalische Anmeldung herunterladen"
 }
