--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -587,5 +587,6 @@
 	"notAssignedParticipants": "Not Yet Assigned Participants",
 	"noAnswer": "No Answer",
 	"downloadResults": "Download Survey Results",
-	"surveyOption": "Option"
+	"surveyOption": "Option",
+	"downloadPostalDocuments": "Download documents for postal registration"
 }
