✨ feature: add contract content handling and update PDF generation for postal registration

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -587,5 +587,6 @@
 	"noAnswer": "No Answer",
 	"downloadResults": "Download Survey Results",
 	"surveyOption": "Option",
-	"downloadPostalDocuments": "Download documents for postal registration"
+	"downloadPostalDocuments": "Download documents for postal registration",
+	"postalTemplateTest": "Generate test document"
 }
