✨ feature: add functionality to change participant status and update postal registration UI with new translations

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -650,5 +650,7 @@
 	"postalTemplateGuardianConsent": "Basis-PDF für die Einverständniserklärung der Erziehungsberechtigten",
 	"postalTemplateMediaConsent": "Basis-PDF für die Bildnutzungseinwilligung",
 	"postalTemplateTermsAndConditions": "PDF für die Vertragsbedingungen",
-	"postalTemplateTest": "Testdokument generieren"
+	"postalTemplateTest": "Testdokument generieren",
+	"scanPostalRegistrationCode": "Scanne den quadratischen Code (Data-Matrix) in der rechten oberen Ecke der postalischen Anmeldung, um den Status zu ändern.",
+	"scanPostalRegistrationCodePrompt": "Präsentiere den Code..."
 }
