--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -651,6 +651,6 @@
 	"postalTemplateMediaConsent": "Basis-PDF für die Bildnutzungseinwilligung",
 	"postalTemplateTermsAndConditions": "PDF für die Vertragsbedingungen",
 	"postalTemplateTest": "Testdokument generieren",
-	"scanPostalRegistrationCode": "Scanne den quadratischen Code (Data-Matrix) in der rechten oberen Ecke der postalischen Anmeldung, um den Status zu ändern.",
+	"scanPostalRegistrationCode": "Scanne den quadratischen Code (Data-Matrix) in der rechten oberen Ecke der postalischen Anmeldung, um den Status zu ändern. Mit <span class=\"kbd kbd-sm\">enter</span> kannst du alles auf einmal bestätigen, mit <span class=\"kbd kbd-sm\">1</span>, <span class=\"kbd kbd-sm\">2</span> und <span class=\"kbd kbd-sm\">3</span> kannst du die einzelnen Dokumente bestätigen.",
 	"scanPostalRegistrationCodePrompt": "Präsentiere den Code..."
 }
