chore: update translations with Fink 🐦

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -408,6 +408,7 @@
 	"reloadToSeeChanges": "Reload the page to see the changes.",
 	"notEnoughData": "Insufficient data",
 	"changesSuccessful": "The changes were saved successfully.",
+	"userNotFound": "User not found",
 	"seats": "Seats",
 	"informationOnYourCountry": "Information on your country",
 	"informationOnYourNSA": "Information on your NSA",
@@ -542,9 +543,6 @@
 	"paymentDone": "payment completed",
 	"paymentProblem": "payment not complete / faulty",
 	"paymentPending": "payment pending",
-	"assistantFlowRolePress1": "Journalist",
-	"personalStatusUnderDevelopment": "Personal status overview still under development",
-	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
 	"deleteParticipantConfirm": "Do you really want to delete the conference participant?",
 	"deleteParticipant": "Remove Particiapnt",
 	"downloads": "Downloads",
@@ -555,7 +553,6 @@
 	"searchForUser": "UserID or Email",
 	"details": "Details",
 	"addUser": "Add Participant",
-	"userNotFound": "User not found",
 	"emailOrId": "email or user-id",
 	"reset": "Reset",
 	"done": "Done",
@@ -588,5 +585,17 @@
 	"downloadResults": "Download Survey Results",
 	"surveyOption": "Option",
 	"downloadPostalDocuments": "Download documents for postal registration",
-	"postalTemplateTest": "Generate test document"
+	"postalRegistrationInstructions": "<p>In order to participate in the conference, we need a few signed documents from you by postal mail – meaning the original copies sent by letter (no photocopies). We provide the documents as a package in a PDF for download. The following documents are included:</p>\n<ul class=\"list-disc pl-8\">\n<li>the <strong>binding registration</strong>, which is based on our terms of use and privacy policy and which you must sign yourself</li>\n<li>the <strong>declaration of consent from all parents or guardians</strong>, which normally must be signed by <strong>both</strong> (!) parents if you are not of legal age by the start of the conference (conferenceStart)</li>\n<li>the <strong>declaration of consent for image use</strong>, which must be signed by you and – if you are not of legal age at the time of the conference – additionally by all of your parents or guardians</li>\n</ul>\n<p>You must print them (you can choose to not print the terms and conditions at the end of the document to save paper), fill in all the required fields, and then sign them as described above, and also have your parents sign them if necessary.</p>\n<p>Our Terms and Conditions should be read, but do not need to be printed.</p>\n<p>Unfortunately, it is not sufficient to simply sign the postal registration electronically or send it to us by scan. We, too, would much prefer to avoid the hassle of paperwork. Unfortunately, the legal framework in Germany does not allow this. Therefore, there is no way around sending the documents by post.</p>",
+	"postalRegistrationFAQ1": "<h2>Where should I send my documents?</h2><p>Please send your documents, thoroughly completed and signed (by you and your parents if applicable), to the following address:</p>",
+	"postalRegistrationFAQ2": "<p>Please ensure that you have sufficient postage, especially for shipments from abroad.</p>",
+	"postalTemplateContract": "Base PDF for the contract",
+	"postalTemplateGuardianConsent": "Base PDF for the consent form of the parent or guardian",
+	"postalTemplateMediaConsent": "Base PDF for image usage consent",
+	"postalTemplateTermsAndConditions": "PDF for the terms and conditions",
+	"postalTemplateTest": "Generate test document",
+	"scanPostalRegistrationCode": "Scan the square code (Data-Matrix) in the top right corner of the postal registration to change the status. With <span class=\"kbd kbd-sm\">enter</span> you can confirm everything at once, and with <span class=\"kbd kbd-sm\">1</span>, <span class=\"kbd kbd-sm\">2</span> and <span class=\"kbd kbd-sm\">3</span> you can confirm the individual documents.",
+	"scanPostalRegistrationCodePrompt": "Present the code...",
+	"assistantFlowRolePress1": "Journalist",
+	"personalStatusUnderDevelopment": "Personal status overview still under development",
+	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly."
 }
