chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -446,15 +446,15 @@
 	"createDelegationDiagram": "Delegation\nanlegen",
 	"joinDelegationDiagram": "Delegation\nbeitreten",
 	"specialRole": "Spezielle Rolle",
-	"didMyStudentsAlreadyCreateADelegation": "Haben meine Schüler*innen\nschon eine oder mehrere\nDelegationen erstellt?",
-	"waitForSignupOfMyStudents": "Auf Anmeldung\nIhrer Schüler*innen\nwarten",
-	"signupAsSupervisor": "Anmeldung als\nBetreuer*in",
+	"didMyStudentsAlreadyCreateADelegation": "Haben meine Schüler*innen schon eine oder mehrere Delegationen erstellt?",
+	"waitForSignupOfMyStudents": "Auf Anmeldung Ihrer Schüler*innen warten",
+	"signupAsSupervisor": "Anmeldung als Betreuer*in",
 	"notEnoughMembers": "Nicht genügend Mitglieder",
 	"notEnoughtRoleApplications": "Nicht genügend Bewerbungen",
 	"missingInformation": "Fehlende Informationen",
 	"youCantApplyAsSingleParticipantAsYouAreAlreadyAppliedInTheConference": "Du kannst nicht als Einzelteilnehmer*in auf der Konferenz bewerben, da du bereits angemeldet bist.",
 	"whichSchoolAreYouFrom": "Von welcher Schule / Institution kommst du?",
-	"singleApplicationMotivation": "Warum bewirbst du dich bei der Konferenz?",
+	"singleApplicationMotivation": "Warum bewirbst du dich bei der Konferenz und auf diese Delegation / Rolle?",
 	"singleApplicationExperience": "Wie viel Erfahrung hast du mit politischen Planspielen wie Model United Nations?",
 	"inAllDelegations": "In allen Delegationen",
 	"inTheConference": "In der Konferenz",
@@ -632,11 +632,10 @@
 	"paperInbox": "Link zum Einreichen von Papieren",
 	"paperInboxDescription": "Über das hinterlegte Formular kannst du Positions- und Arbeitspapiere einreichen.",
 	"paperInboxBtn": "Papier einreichen",
-	"allNations": "Liste aller Nationen der Konferenz",
+	"allNations": "Alle Nationen",
 	"ofAge": "Volljährig",
 	"termsAndConditions": "Teilnahmebedingungen",
 	"nonStateActor": "Nichtstaatlicher Akteur",
-	"allNations": "Alle Nationen",
 	"surveyIsDraft": "Umfrage ist noch ein Entwurf",
 	"surveyIsLive": "Umfrage ist live",
 	"notAssignedParticipants": "Noch nicht zugewiesene Teilnehmende",
