--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -77,6 +77,7 @@
 	"schoolOrInstitution": "School / Institution",
 	"motivation": "Motivation",
 	"experience": "Experience",
+	"willBeSetLater": "Will be set later",
 	"delegationCreatedSuccessfully": "Delegation created successfully.",
 	"nowYouCanInvitePeople": "Now all you have to do is invite delegation partners. To do this, you can send the following link to the people you want to invite:",
 	"orShareThisCode": "Or share with them the following code, which they can use to log in to this website (the code is also valid for supervisors):",
@@ -157,6 +158,7 @@
 	"vegetarian": "Vegetarian",
 	"omnivore": "Omnivorous",
 	"save": "Save",
+	"saved": "Saved ✅",
 	"saveAndContinue": "Save and continue",
 	"loginInformation": "Login information",
 	"loginName": "Username",
@@ -299,6 +301,7 @@
 	"assistantFlowRoleNSA1": "Representative of a NSA",
 	"assistantFlowRoleNSA2": "As a representative of a non-state actor (NSA), you represent an organization.",
 	"assistantFlowRoleNSA3": "You are not tied to a specific committee but can influence the committees that deal with the most important issues for your organization",
+	"journalist": "Journalist",
 	"assistantFlowRolePress2": "As a journalist for the conference press, you report on what happens in the committees.",
 	"assistantFlowRolePress3": "They write articles and commentaries and also produce television news reports that are shown on the evenings of the conference.",
 	"assistantFlowRoleOther1": "Other special role",
@@ -392,6 +395,7 @@
 	"conferenceStart": "Conference start date",
 	"conferenceEnd": "Conference end date",
 	"selectADate": "Select Date",
+	"selectAnEndDate": "Select End Date",
 	"conferenceImage": "Conference Image",
 	"conferenceTimeSettings": "Settings for the conference phases",
 	"conferenceStartRegistration": "Start of registration",
@@ -407,7 +411,62 @@
 	"confirmRotateCode": "Are you sure you want to renew the invitation code?",
 	"reloadToSeeChanges": "Reload the page to see the changes.",
 	"notEnoughData": "Insufficient data",
+	"pathDoesNotExist": "The path {path} could not be found ( {error} )",
+	"forbidden": "Access denied. Please reload the page if necessary! ( {error} )",
+	"unauthorized": "Unauthorized. Please reload the page if necessary! ( {error} )",
+	"internalServerError": "Internal Server Error.",
+	"valueCannotBeEmpty": "The specified value for {field} cannot be empty.",
+	"valueTooShort": "The specified value for {field} is too short.",
+	"pleaseFillOutYourProfileCorrectly": "Please make sure <b><a href='/my-account'>your profile</a></b> is filled out correctly.",
 	"changesSuccessful": "The changes were saved successfully.",
+	"toConference": "To the conference",
+	"userNotFound": "User not found",
+	"until": "until",
+	"pleaseEnterAValidPhoneNumber": "Please enter a valid phone number (including country code).",
+	"noStatement": "Not specified",
+	"pleaseEnterAZipCpode": "Please enter a valid postal code.",
+	"dateMustBeBefore": "The date must be before the {date} .",
+	"atLeastXChars": "At least {amount} characters required.",
+	"noResults": "No results",
+	"noDataAvailable": "No data available",
+	"pleaseEnterAValidWebsite": "Please enter a valid website.",
+	"pleaseEnterAValidDate": "Please enter a valid date.",
+	"notFound": "Not found",
+	"statistics": "statistics",
+	"participants": "Participants",
+	"comingSoon": "Available soon",
+	"howDoIApply": "How do I apply?",
+	"thisDiagramShowHowToApply": "The following diagram shows how to apply for each role.",
+	"whichRoleDoIWantToTakeInTheConference": "What role do I want to take on at the conference?",
+	"delegateOfACountry": "delegation from a country",
+	"nonStateActorDiagram": "Non-State Actor",
+	"doIhavePeopleToApplyWith": "Do I have people with whom I can apply as a group?",
+	"didSomeoneOfTheseAlreadyCreateADelegation": "Has any of the people already created a delegation?",
+	"individualApplicationDiagram": "Single application",
+	"createDelegationDiagram": "Create Delegation",
+	"joinDelegationDiagram": "Join Delegation",
+	"specialRole": "Special role",
+	"didMyStudentsAlreadyCreateADelegation": "Have my students already created one or more delegations?",
+	"waitForSignupOfMyStudents": "Waiting for your students to register",
+	"signupAsSupervisor": "Registration as a supervisor",
+	"notEnoughMembers": "Not enough members",
+	"notEnoughtRoleApplications": "Not enough applications",
+	"missingInformation": "Missing information",
+	"youCantApplyAsSingleParticipantAsYouAreAlreadyAppliedInTheConference": "You cannot apply to the conference as an individual attendee because you are already registered.",
+	"whichSchoolAreYouFrom": "Which school/institution do you come from?",
+	"singleApplicationMotivation": "Why are you applying to the conference and for this role?",
+	"singleApplicationExperience": "How much experience do you have with political simulation games like Model United Nations?",
+	"inAllDelegations": "In all delegations",
+	"inTheConference": "In the conference",
+	"applicationTimeframeClosed": "The registration period is closed.",
+	"tableSize": "Table size",
+	"areYouSure": "Are you sure?",
+	"areYouSureYouWantToExport": "The data may contain sensitive information. Are you sure you want to export the data?",
+	"thisExportContainsSensitiveData": "Please note that this export contains sensitive data and should only be shared with authorized persons.",
+	"exportFrom": "Export from {appName}",
+	"createdOn": "Created on {date} at {time}",
+	"nation": "Nation",
+	"nationOrNSA": "Nation/NSA",
 	"seats": "Seats",
 	"informationOnYourCountry": "Information on your country",
 	"informationOnYourNSA": "Information on your NSA",
@@ -542,9 +601,6 @@
 	"paymentDone": "payment completed",
 	"paymentProblem": "payment not complete / faulty",
 	"paymentPending": "payment pending",
-	"assistantFlowRolePress1": "Journalist",
-	"personalStatusUnderDevelopment": "Personal status overview still under development",
-	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
 	"deleteParticipantConfirm": "Do you really want to delete the conference participant?",
 	"deleteParticipant": "Remove Particiapnt",
 	"downloads": "Downloads",
@@ -555,7 +611,6 @@
 	"searchForUser": "UserID or Email",
 	"details": "Details",
 	"addUser": "Add Participant",
-	"userNotFound": "User not found",
 	"emailOrId": "email or user-id",
 	"reset": "Reset",
 	"done": "Done",
@@ -577,15 +632,17 @@
 	"paperInbox": "Link to Submit Papers",
 	"paperInboxDescription": "You can submit position and working papers using the form provided.",
 	"paperInboxBtn": "Submit Paper",
-	"allNations": "List of all Nations at the Conference",
+	"allNations": "All Nations",
 	"ofAge": "Of Age",
 	"termsAndConditions": "Terms & Conditions",
 	"nonStateActor": "Non-State Actor",
-	"allNations": "All Nations",
 	"surveyIsDraft": "Survey is stil a draft",
 	"surveyIsLive": "Survey is live",
 	"notAssignedParticipants": "Not Yet Assigned Participants",
 	"noAnswer": "No Answer",
 	"downloadResults": "Download Survey Results",
-	"surveyOption": "Option"
+	"surveyOption": "Option",
+	"assistantFlowRolePress1": "Journalist",
+	"personalStatusUnderDevelopment": "Personal status overview still under development",
+	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly."
 }
