chore: update translations with Fink 🐦

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -666,6 +666,15 @@
 	"certificateIsValidFor": "This certificate certifies that<br /> <strong>{fullName}</strong><br /> from {conferenceStartDate} to {conferenceEndDate} at the event<br /> <strong>{conferenceTitle}</strong><br /> participated.",
 	"certificateIsNotValid": "The certificate is invalid.",
 	"certificateIsNotValidText": "The certificate cannot be verified. Please contact us if you believe this is an error.",
+	"certificateDownloadError": "The certificate could not be downloaded.",
+	"unknownConferenceTitle": "Unknown conference name",
+	"switchAttendanceState": "Toggle attendance of all participants",
+	"switchAttendanceStateDescription": "Here you can toggle the attendance of all participants. Clicking the corresponding button will set the attendance for all participants to the respective selection – regardless of their previous status. This action cannot be undone and, due to its far-reaching nature, is reserved for administrators.",
+	"helper": "Helper",
+	"helperDescription": "Here you'll find small helper scripts that can assist you with the app. Some of these scripts are very powerful and far-reaching, and can even irreversibly overwrite data. Please be careful when using these functions. Some actions can only be performed by admins.",
+	"setAttendanceTrue": "Set everyone to \"Present\"",
+	"setAttendanceFalse": "Set everyone to \"Absent\"",
+	"switchAttendanceStateConfirmation": "Are you sure you want to toggle the presence of all participants? This cannot be undone.",
 	"assistantFlowRolePress1": "Journalist",
 	"personalStatusUnderDevelopment": "Personal status overview still under development",
 	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly."
