--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -653,5 +653,26 @@
 	"postalTemplateTest": "Testdokument generieren",
 	"scanPostalRegistrationCode": "Scanne den quadratischen Code (Data-Matrix) in der rechten oberen Ecke der postalischen Anmeldung, um den Status zu ändern. Mit <span class=\"kbd kbd-sm\">enter</span> kannst du alles auf einmal bestätigen, mit <span class=\"kbd kbd-sm\">1</span>, <span class=\"kbd kbd-sm\">2</span>, <span class=\"kbd kbd-sm\">3</span> und <span class=\"kbd kbd-sm\">4</span> kannst du die einzelnen Dokumente bestätigen.",
 	"scanPostalRegistrationCodePrompt": "Präsentiere den Code...",
-	"mediaConsentStatus": "Fotostatus"
+	"mediaConsentStatus": "Fotostatus",
+	"thanksForParticipating": "Vielen Dank für deine Teilnahme!",
+	"thanksForParticipatingDescription": "Wir hoffen, dass du von der Konferenz viel mitnehmen konntest. Wir freuen uns, wenn du auch nächstes Jahr oder bei unserer Schwesterkonferenz wieder Teilnimmst. Wenn du noch Fragen oder Anregungen hast, kannst du dich jederzeit an die Teilnehmendenbetreuung wenden.",
+	"certificate": "Teilnahmezertifikat",
+	"certificateDescriptionNotAttended": "Du hast an der Konferenz nicht oder nicht ausreichend teilgenommen und kannst daher kein Zertifikat herunterladen. Wenn du glaubst, dass es sich dabei um einen Fehler handelt, wende dich bitte an die Teilnehmendenbetreuung.",
+	"certificateDescription": "Hier kannst du hier dein Teilnahmezertifikat herunterladen.",
+	"downloadCertificate": "Zertifikat herunterladen",
+	"CertifiacteTemplate": "Basis-PDF für das Zertifikat",
+	"certificateNotYetAvailable": "Zertifikat steht noch nicht zur Verfügung. Bitte komme später zurück.",
+	"certificateIsValid": "Das Zertifikat ist gültig.",
+	"certificateIsValidFor": "Dieses Zertifikat bescheinigt, dass <br /><strong>{fullName}</strong><br /> vom {conferenceStartDate} bis zum {conferenceEndDate} an der Veranstaltung <br /><strong>{conferenceTitle}</strong><br /> teilgenommen hat.",
+	"certificateIsNotValid": "Das Zertifikat ist ungültig.",
+	"certificateIsNotValidText": "Das Zertifikat kann nicht verifiziert werden. Bitte wende dich an uns, wenn du glaubst, dass es sich dabei um einen Fehler handelt.",
+	"certificateDownloadError": "Das Zertifikat konnte nicht heruntergeladen werden.",
+	"unknownConferenceTitle": "Unbekannter Konferenzname",
+	"switchAttendanceState": "Anwesenheit aller Teilnehmenden umschalten",
+	"switchAttendanceStateDescription": "Hier kannst du die Anwesenheit aller Teilnehmenden umschalten. Wenn du auf den entsprechenden Button klickst, wird die Anwesenheit für alle Teilnehmenden die jeweilige Auswahl gesetzt – unabhängig davon, wie der Status vorher war. Diese Aktion kann nicht rückgängig gemacht werden und ist aufgrund der Tragweite Administratoren vorbehalten.",
+	"helper": "Helfer",
+	"helperDescription": "Hier findest du kleine Helfer-Skripte, die dir bei der Arbeit mit der App helfen können. Die Skripte sind teilweise sehr mächtig und weitreichend und können auch Daten unwiderruflich überschreiben. Bitte sei vorsichtig, wenn du dich dieser Funktionen bedienst. Manche Funktionen sind Administratoren vorbehalten.",
+	"setAttendanceTrue": "Alle auf \"Anwesend\" setzen",
+	"setAttendanceFalse": "Alle auf \"Abwesend\" setzen",
+	"switchAttendanceStateConfirmation": "Bist du dir sicher, dass du die Anwesenheit aller Teilnehmenden umschalten möchtest? Dies kann nicht rückgängig gemacht werden."
 }
