--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -653,8 +653,29 @@
 	"postalTemplateTest": "Generate test document",
 	"scanPostalRegistrationCode": "Scan the square code (Data-Matrix) in the top right corner of the postal registration to change the status. With <span class=\"kbd kbd-sm\">enter</span> you can confirm everything at once, and with <span class=\"kbd kbd-sm\">1</span>, <span class=\"kbd kbd-sm\">2</span>, <span class=\"kbd kbd-sm\">3</span> and <span class=\"kbd kbd-sm\">4</span> you can confirm the individual documents.",
 	"scanPostalRegistrationCodePrompt": "Present the code...",
+	"mediaConsentStatus": "Media Status",
+	"thanksForParticipating": "Thank you for your participation!",
+	"thanksForParticipatingDescription": "We hope you were able to gain a lot from the conference. We look forward to seeing you again next year or at our sister conference. If you have any questions or suggestions, please feel free to contact the participant care.",
+	"certificate": "Certificate of participation",
+	"certificateDescriptionNotAttended": "You didn't attend the conference or didn't attend sufficiently and therefore can't download a certificate. If you believe this is an error, please contact the participant care.",
+	"certificateDescription": "You can download your certificate of participation here.",
+	"downloadCertificate": "Download certificate",
+	"CertifiacteTemplate": "Base-PDF for the certificate",
+	"certificateNotYetAvailable": "Certificate not yet available. Please come back later.",
+	"certificateIsValid": "The certificate is valid.",
+	"certificateIsValidFor": "This certificate certifies that<br /> <strong>{fullName}</strong><br /> from {conferenceStartDate} to {conferenceEndDate} at the event<br /> <strong>{conferenceTitle}</strong><br /> participated.",
+	"certificateIsNotValid": "The certificate is invalid.",
+	"certificateIsNotValidText": "The certificate cannot be verified. Please contact us if you believe this is an error.",
+	"certificateDownloadError": "The certificate could not be downloaded.",
+	"unknownConferenceTitle": "Unknown conference name",
+	"switchAttendanceState": "Toggle attendance of all participants",
+	"switchAttendanceStateDescription": "Here you can toggle the attendance of all participants. Clicking the corresponding button will set the attendance for all participants to the respective selection – regardless of their previous status. This action cannot be undone and, due to its far-reaching nature, is reserved for administrators.",
+	"helper": "Helper",
+	"helperDescription": "Here you'll find small helper scripts that can assist you with the app. Some of these scripts are very powerful and far-reaching, and can even irreversibly overwrite data. Please be careful when using these functions. Some actions can only be performed by admins.",
+	"setAttendanceTrue": "Set everyone to \"Present\"",
+	"setAttendanceFalse": "Set everyone to \"Absent\"",
+	"switchAttendanceStateConfirmation": "Are you sure you want to toggle the presence of all participants? This cannot be undone.",
 	"assistantFlowRolePress1": "Journalist",
 	"personalStatusUnderDevelopment": "Personal status overview still under development",
-	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly.",
-	"mediaConsentStatus": "Media Status"
+	"personalStatusUnderDevelopmentDescription": "The personal status overview is still under development. Later, you'll find here information about the postal registration and payment of the conference fee. Please follow the instructions being sent to you by the participant care. You'll have an overview shortly."
 }
